--- a/views/index.html
+++ b/views/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Cold Food</title>
+
     <link rel="shortcut icon" href="/images/favicon.ico">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/styles.css">
+
   </head>
   <body>
-    
+    <div class="container">
+      <p>The food is getting cold.</p>
+    </div>
   </body>
 </html>
