--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Cold Food</title>
+    <title>Cold Food | a Twitter bot</title>
 
     <link rel="shortcut icon" href="/images/favicon.ico">
 
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">
-      <p>The food is getting cold.</p>
+      <h3>The food is getting cold.</h3>
     </div>
   </body>
 </html>
