--- a/views/index.html
+++ b/views/index.html
@@ -26,8 +26,8 @@
           <strong>Ready to be tweeted: </strong>{{tweet.isReady}}
         </div>
 
-      <strong>Tweet: </strong><input type="text" class="form-control" placeholder="Tweet" ng-model="tweetsIndexCtrl.newTweet.status">
-      <input type="checkbox" id="cbox" ng-model="tweetsIndexCtrl.newTweet.isReady"><label for="cbox">"Ready"</cbox>
+      <input type="text" class="form-control" placeholder="Tweet" ng-model="tweetsIndexCtrl.newTweet.status">
+      <input type="checkbox" ng-model="tweetsIndexCtrl.newTweet.isReady"><label for="checkbox"> Ready</cbox>
     </div>
   </body>
 </html>
