--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/styles/styles.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-route.min.js"></script>
     <script src="/scripts/app.js"></script>
 
   </head>
@@ -20,25 +21,7 @@
       <h3>The food is getting cold.</h3>
     </div>
 
-    <div class="container" ng-controller="TweetsIndexController as tweetsIndexCtrl">
+    <div ng-view></div>
 
-        <div ng-repeat="tweet in tweetsIndexCtrl.tweets">
-
-          <input ng-model="tweet.status" type="text" class="form-control input-md">
-          <input type="checkbox" ng-model="tweet.isReady">
-          <label for="checkbox"> Ready</label>
-          <br>
-
-          <button class='btn btn-success' ng-click="tweetsIndexCtrl.editTweet(tweet); editing = false">
-            Save changes
-          </button>
-
-          <button class='btn btn-danger' ng-click="tweetsIndexCtrl.deleteTweet(tweet)">
-            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-          </button>
-          <br>
-          <br>
-        </div>
-    </div>
   </body>
 </html>
