--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-route.min.js"></script>
     <script src="/scripts/app.js"></script>
+    <script src="scripts/controllers/TweetsIndexController.js"></script>
 
   </head>
   <body>
