--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h3>The food is getting cold.</h3>
+      <h3 class="header">The food is getting cold.</h3>
       <div class="row">
         <div ng-view class="col-sm-8"></div>
         <div class="col-sm-4">
