updated tweet model to include property isTweeted

--- a/views/templates/tweets.html
+++ b/views/templates/tweets.html
@@ -4,7 +4,7 @@
 
     <input ng-model="tweet.status" type="text" class="form-control input-md">
     <!-- TODO add character count -->
-    <!-- <input type="checkbox" ng-model="tweet.isReady">
+    <!-- <input type="checkbox" ng-model="tweet.isTweeted">
     <label for="checkbox"> Ready</label> -->
 
     <button type="button" class="btn btn-primary outline" ng-click="tweetsIndexCtrl.editTweet(tweet); editing = false">
