--- a/views/templates/tweets.html
+++ b/views/templates/tweets.html
@@ -1,23 +1,23 @@
-<div ng-repeat="tweet in tweetsIndexCtrl.tweets">
+<div ng-repeat="tweet in tweetsIndexCtrl.tweets | filter:{isTweeted:false}">
 
-  <div class="tweet-view">
+  <div>
 
     <input ng-model="tweet.status" type="text" class="form-control input-md">
-    <!-- TODO add character count -->
-    <!-- <input type="checkbox" ng-model="tweet.isTweeted">
-    <label for="checkbox"> Ready</label> -->
 
-    <button type="button" class="btn btn-primary outline" ng-click="tweetsIndexCtrl.editTweet(tweet); editing = false">
-      Save changes
-    </button>
+    <div class="counter" ng-class="{'too-long' : (tweet.status.length > 140),
+                                    'tweet-away' : (tweet.status.length <= 140)}">
+      {{tweet.status.length}} characters
+    </div>
 
-    <button type="button" class="btn btn-primary btn-sm outline" ng-click="tweetsIndexCtrl.deleteTweet(tweet)">
-      <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-    </button>
+    <div class="button-group pull-right">
+        <button type="button" class="btn btn-primary outline" ng-click="tweetsIndexCtrl.editTweet(tweet); editing = false">
+          Save changes
+        </button>
 
-    <!-- <button class="btn btn-sm btn-primary outline">
-      <span class="glyphicon glyphicon-refresh spinning"></span>
-    </button> -->
-
+        <button type="button" class="btn btn-primary btn-sm outline" ng-click="tweetsIndexCtrl.deleteTweet(tweet)">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+        </button>
+        
+    </div>
   </div>
 </div>
